index.html updated

--- a/SD_Assignment2/index.html
+++ b/SD_Assignment2/index.html
@@ -274,6 +274,9 @@
 
 </script>
 
+<h2>Assignment 2C: One barchart and (at least) two datasets</h2>
+<div id="c_svg"></div>
+
 <h2>Assignment 2D: Visualizing geodata</h2>
 <div id="d_svg"></div>
 <script type="text/javascript">
