k-mean notebook added

--- a/SD_Assignment2/index.html
+++ b/SD_Assignment2/index.html
@@ -571,6 +571,7 @@
 
 
     <h2>Assignment 2D: Visualizing geodata</h2>
+    <a href="K-mean_csv_gen.ipynb">Check out the python code to generate the k-values</a>
     <div id="d_svg"></div>
     <script type="text/javascript">
         $(function() {
@@ -706,7 +707,7 @@
         <button class="kchange btn btn-default" data-type="k5" type="button">Click for k5</button>
         <button class="kchange btn btn-default" data-type="k6" type="button">Click for k6</button>
     </div>
-    <div>*You can also hover to peek</div>
+    <div style="margin-bottom: 30px">*You can also hover to peek</div>
 </div>
 </body>
 </html>
