link to python notebook viewer

--- a/SD_Assignment2/index.html
+++ b/SD_Assignment2/index.html
@@ -571,7 +571,7 @@
 
 
     <h2>Assignment 2D: Visualizing geodata</h2>
-    <a href="K-mean_csv_gen.ipynb">Check out the python code to generate the k-values</a>
+    <a href="http://nbviewer.jupyter.org/github/finkol/finkol.github.io/blob/master/SD_Assignment2/K-mean_csv_gen.ipynb">Check out the python code to generate the k-values</a>
     <div id="d_svg"></div>
     <script type="text/javascript">
         $(function() {
