--- a/finnsdottir/index.html
+++ b/finnsdottir/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <meta
             name="description"
-            content="Giskaðu á nafnið í 6 tilraunum!"
+            content="Giskaðu á nafnið!"
         />
-        <meta property="og:title" content="Hvað heitir Finnsdóttir" />
+        <meta property="og:title" content="Hvað heitir Finnsdóttir?" />
         <meta property="og:type" content="game" />
         <meta property="og:url" content="https://t-veor.github.io/ordill" />
         <meta
@@ -16,7 +16,7 @@
         />
         <meta
             property="og:description"
-            content="Giskaðu á nafnið í 6 tilraunum!"
+            content="Giskaðu á nafnið!"
         />
         <link href="icon_64.png" rel="icon shortcut" sizes="64x64" />
         <link href="icon_192.png" rel="apple-touch-icon" sizes="192x192" />
